# ASKD_app

./: CMakeLists.txt  ConnectionCheckDialog.cpp  ConnectionCheckDialog.h  ConnectionCheckDialog.ui  README.md  main.cpp  mainwindow.ui
